# django-business-management-practice

./: .dockerignore  .gitignore  Dockerfile  Makefile  crontab  django-business-management-practice.code-workspace  fly.toml  package-lock.json  package.json  pyproject.toml  stats.json  webpack.config.js
announcement/: admin.py  apps.py  filters.py  forms.py  models.py  tables.py  urls.py  views.py
announcement/templates/: announcement_branchs_list.html  announcement_create.html  announcement_delete.html  announcement_detail.html  announcement_grid.html  announcement_list.html  announcement_update.html
assets/js/: announcement_create.js  announcement_list.js  announcement_update.js  checklist_list.js  index.js
branch/: apps.py  forms.py  models.py
branchfile/: admin.py  apps.py  filters.py  forms.py  models.py  tables.py  urls.py  views.py
branchfile/templates/: branchfile_branchs_list.html  branchfile_delete.html  branchfile_grid.html  branchfile_upload_files.html
checklist/: admin.py  apps.py  filters.py  forms.py  models.py  tables.py  urls.py  views.py
checklist/templates/: checklist_branchs_list.html  checklist_create.html  checklist_export.html  checklist_export_csv.html  checklist_grid.html  checklist_list.html  checklist_template_delete.html  checklist_template_update.html  checklist_temporary_export.html  checklist_temporary_export_csv.html  checklist_update.html
core/: admin.py  api.py  apps.py  forms.py  mixins.py  models.py  urls.py  utils.py  views.py  widgets.py
django_project/: settings.py  urls.py
member/: admin.py  models.py  views.py
(+41 files in other folders)
